--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>MyPilas</title>
+    <title>My documentation</title>
 
     <link rel="stylesheet" href="css/bootstrap-grid.min.css">
     <link rel="stylesheet" href="css/base.css">
@@ -17,7 +17,7 @@
       <div class="container">
 
         <nav class="navegacao">
-          <img src="imagens/logo.png" width="100" height="35" alt="MyPilas">
+          <img src="imagens/logo1.png" width="80" height="60" alt="MyDocs">
 
           <div class="navegacao__menu"><!--elemento da nossa navegação-->
             <button class="botao-chaveador js-botao-chaveador"></button><!-- hook js ou gancho js -->
@@ -44,18 +44,18 @@
       
     </header>
 
-    <!--Utilizei aqui uma section em vez do div, pois de acordo com as espacificações
+    <!--Utilizei aqui uma section em vez do div, pois de acordo com as especificações
     na section é que deve conter os headers tipo h1, h2 ..., mas funcionaria também
     se estivesse com uma div-->
     <section class="layout-chamada"> <!--bloco de layout da chamada-->
       <div class="container">
       
         <div class="chamada"> <!--bloco da chamada-->
-          <h1 class="chamada__titulo">As finanças da sua empresa em ordem</h1>
-          <p class="chamada__subtitulo">Software de gestão simples e prático para pequenos negócios</p>
+          <h1 class="chamada__titulo">Minha base de conhecimento</h1>
+          <p class="chamada__subtitulo">Documentação de erros conhecidos</p>
 
           <div class="chamada__acao"><!--elemento do bloco-->
-            <a href="#planos" class="botao  botao--principal">Conheça os planos</a>  <!-- o # faz referência ao ID planos que está na mesma página-->
+            <a href="#planos" class="botao  botao--principal">Documentações</a>  <!-- o # faz referência ao ID planos que está na mesma página-->
           </div>
 
         </div>
